--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
       <img src="./images/logo_place_header.svg" alt="Логотип Практикума" class="logo logo_place_header">
       <h1 class="header__title">Научиться учиться</h1>
       <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей
-        жизни? <a href="#" class="header__link">Узнать →</a></p>
-      <div class="header__main-illustration"></div>
-      <div class="header__square-pic header__rotation"></div>
+        жизни? <a href="#" class="header__link">Узнать&nbsp;&#8594;</a></p>
+      <img src="./images/header-image.png" alt="Опять двойка" class="header__main-illustration">
+      <div class="header__square-pic rotation__360-clockwise"></div>
     </header>
 
     <main class="content">
@@ -97,7 +97,7 @@
       <section class="feynman">
         <h2 class="feynman__title">Метод Фейнмана</h2>
         <p class="feynman__subtitle">Выучить и не забыть.</p>
-        <a href="#" class="feynman__link">Подробнее →</a>
+        <a href="#" class="feynman__link">Подробнее&nbsp;&#8594;</a>
       </section>
 
       <section class="digits">
@@ -147,14 +147,14 @@
         <div class="khan__container">
           <p class="khan__author">Салман Хан</p>
           <h2 class="khan__title">Весь мир — школа</h2>
-          <p class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему
+          <blockquote class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему
             миру. Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так учащиеся повсюду
-            смогут получить навыки и знания, которые приносят успех в школе, карьере и жизни.</p>
+            смогут получить навыки и знания, которые приносят успех в школе, карьере и жизни.</blockquote>
           <p class="khan__quote-author">Джордж Лукас</p>
           <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
           <div class="khan__book-container">
-            <div class="khan__book-pic"></div>
-            <a href="#" class="khan__buy-link">Купить книгу →</a>
+            <img src="./images/khan-book.jpg" alt="Обложка книги «Весь мир — школа»" class="khan__book-pic">
+            <a href="#" class="khan__buy-link">Купить книгу&nbsp;&#8594;</a>
           </div>
         </div>
       </section>
@@ -205,17 +205,17 @@
             <p class="table__text">Уделяйте внимание количеству и скорости.</p>
           </li>
         </ul>
-        <div class="kaufman__triangle kaufman__rotation"></div>
+        <div class="kaufman__triangle rotation__360-clockwise"></div>
       </section>
 
       <section class="resources">
         <h2 class="section-title resources__section-title">Полезные ресурсы</h2>
         <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
         <ul class="resources__logo-zone">
-          <li class="resources__logo"><img src="./images/logo/resources-arzamas.svg" alt="Арзамас"></li>
-          <li class="resources__logo"><img src="./images/logo/resources-n1.svg" alt="N+1"></li>
-          <li class="resources__logo"><img src="./images/logo/resources-strelka.svg" alt="Стрелка"></li>
-          <li class="resources__logo"><img src="./images/logo/resources-polka.svg" alt="Полка"></li>
+          <li class="resources__logo"><a href="#"><img src="./images/logo/resources-arzamas.svg" alt="Арзамас"></a></li>
+          <li class="resources__logo"><a href="#"><img src="./images/logo/resources-n1.svg" alt="N+1"></a></li>
+          <li class="resources__logo"><a href="#"><img src="./images/logo/resources-strelka.svg" alt="Стрелка"></a></li>
+          <li class="resources__logo"><a href="#"><img src="./images/logo/resources-polka.svg" alt="Полка"></a></li>
         </ul>
       </section>
     </main>
